# midiscorer

./: AGENT.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  Main.cpp  README.md  TECHNICAL_DESIGN.md  todo.md
resources/configs/: instrument_modules.json
resources/instruments/: integra7.json  ketronevm.json  maxplus.json  midigm.json
src/app/: AppTabsHost.h  MainComponent.h  PlayerTabComponent.h  ScoreRebuildService.h  SoundsTabComponent.h  StaffDisplayOctaveSelector.h  TracksTabComponent.h  TransportCoordinator.h
src/harmony/: ChordDetector.h
src/midi/: MidiProjectLoader.h  TempoMap.h  TrackNoteExtractor.h
src/notation/: ScoreModel.h  ScoreRenderer.h
src/playback/: IPlaybackPositionSource.h  MidiFilePlaybackEngineAdapter.h  MidiOutputDevice.h  PlaybackController.h  TrackMixMidiSeed.h  TrackMixProcessor.h  TrackMixState.h
src/sounds/: InstrumentCatalog.h  TrackSoundProgram.h
tests/: test_main.cpp
tests/fixtures/: README.md  altered_chords.mid  fixture-specs.md  generate_fixtures.py  syncopated_durations.mid
